--- a/style.css
+++ b/style.css
@@ -5,28 +5,28 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.main-picture-wrapper {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.main-picture-wrapper img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.main-picture-wrapper .more_inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .main-picture-wrapper {
     text-align: center;
   }
 }
 
-.centered-main-page-element {
+.wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -38,7 +38,7 @@ body {
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.task-adding-wrapper {
   display: flex;
 }
 
@@ -71,7 +71,7 @@ button:hover {
 
 /* Heading */
 h3,
-label[for="new-task"] {
+label[for="new-task-input"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -99,12 +99,12 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="new-task-input"] {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+input#new-task-input {
   width: 318px;
 }
 
@@ -158,11 +158,11 @@ ul li input[type=text] {
   display: none
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
   display: none;
 }
