--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
   text-align: right;
 }
 
-.main-picture-wrapper img {
+.main-picture {
   width: 100%;
 }
 
-.main-picture-wrapper .more_inf {
+.more_info {
   font-family: fantasy, cursive;
 }
 
@@ -32,7 +32,7 @@ body {
   margin: 0 auto 0;
 }
 
-.task {
+.task-input , .task-label {
   width: 56%;
   display: inline-block;
   flex-grow: 1
@@ -47,7 +47,7 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li {
   list-style: none;
 }
 
@@ -55,7 +55,7 @@ input, button {
   outline: none;
 }
 
-button {
+.btn, .edit, .delete {
   background: none;
   border: 0px;
   color: #888;
@@ -65,13 +65,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover, .edit:hover, .delete:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for="new-task-input"] {
+.subtitle {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -81,7 +80,17 @@ label[for="new-task-input"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.new-task-label {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.task-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -94,22 +103,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task-input"] {
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task-input {
+.task-input#new-task-input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-item, .edit-mode {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -119,50 +128,47 @@ li {
   align-items: center;
 }
 
-li>* {
+.task-item>*, .edit-mode>* {
   vertical-align: middle;
 }
 
-li>input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.task-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.task-input {
   width: 226px
 }
 
-button.delete img {
+.delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete-img:hover {
   transform: rotateZ(0);
 }
 
-/* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through color: #888;
-}
+
 
 /* Edit Task */
-ul li input[type=text] {
+.task-item .task-input {
   display: none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .task-input {
   display: inline-block;
   width: 224px
 }
 
-ul li.edit-mode label {
+.edit-mode label {
   display: none;
 }
