--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .task-input , .task-label {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-adding-wrapper {
@@ -146,7 +146,7 @@ input, button {
 }
 
 .task-input {
-  width: 226px
+  width: 226px;
 }
 
 .delete-img {
@@ -161,12 +161,12 @@ input, button {
 
 /* Edit Task */
 .task-item .task-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit-mode label {
